fix: fix scrollbar in milestones, add scrollbar in technical debt, change sprint search placeholder

--- a/css/milestone.css
+++ b/css/milestone.css
@@ -1,5 +1,6 @@
 #milestonesListView {
-  display: block;
+  display: block; 
+  height: 65%; 
 }
 
 #milestonesGraphicalView {
